--- a/public/agendar-consulta.html
+++ b/public/agendar-consulta.html
@@ -34,7 +34,8 @@
 
     <main class="container my-5">
         <h2 class="text-center mb-4 fw-bold">Agende sua Consulta Online</h2>
-        <p class="text-center text-muted mb-5">Encontre o especialista ideal para você e marque sua consulta em poucos passos.</p>
+        <p class="text-center text-muted mb-5">Encontre o especialista ideal para você e marque sua consulta em poucos
+            passos.</p>
 
         <section class="card p-4 mb-5 shadow-sm">
             <h5 class="card-title fw-bold mb-3">Encontre um especialista</h5>
@@ -49,7 +50,7 @@
                             <option>Dermatologia</option>
                             <option>Cardiologia</option>
                             <option>Psicologia</option>
-                            </select>
+                        </select>
                     </div>
                     <div class="col-md-4">
                         <label for="date" class="form-label">Data</label>
@@ -107,23 +108,16 @@
                     </div>
                 </div>
 
-                </div>
+            </div>
         </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/script.js"></script>
-    
-    <script>
-        // Este script é apenas para simular a exibição dos resultados.
-        // Iremos substituí-lo por uma lógica real que busca dados do nosso backend.
-        document.getElementById('search-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            document.getElementById('results-section').classList.remove('d-none');
-            // Aqui faremos uma chamada API para buscar os médicos com base nos filtros
-            // e construir a lista de resultados dinamicamente.
-        });
-    </script>
+    <script src="assets/js/auth.js"></script>
+    <script src="assets/js/auth-nav.js"></script>
+    <script src="assets/js/script.js" ></script>
+    <script src="assets/js/magnifier-overlay"></script>
+
 </body>
 
 </html>
