--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<body>
+<body class="auth-page">
 
     <header class="navbar navbar-expand-lg">
         <div class="container-fluid px-5">
@@ -73,7 +73,10 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/auth.js"></script>
+    <script src="assets/js/auth-nav.js"></script>
     <script src="assets/js/cadastro.js"></script>
+    <script src="assets/js/magnifier-overlay.js"></script>
 </body>
 
 </html>
