--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    
 </head>
 
 <body class="indexbody">
@@ -25,6 +26,7 @@
                     <li class="nav-item"><a class="nav-link fs-5" href="cadastro.html">Cadastre-se</a></li>
                     <li class="nav-item"><a class="nav-link fs-5" href="sobre-nos.html">Sobre Nós</a></li>
                     <li class="nav-item"><a class="nav-link fs-5" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link fs-5" href="contato.html">Contato</a></li>
                 </ul>
             </div>
             <img id="user-profile-pic" class="rounded-circle" src="https://via.placeholder.com/50"
@@ -125,7 +127,10 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/auth.js"></script>
+    <script src="assets/js/auth-nav.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/magnifier-overlay.js"></script>
 </body>
 
 </html>
