--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="auth-page">
 
     <header class="navbar navbar-expand-lg">
         <div class="container-fluid px-5">
@@ -25,6 +25,9 @@
                     <li class="nav-item"><a class="nav-link fs-5" href="sobre-nos.html">Sobre Nós</a></li>
                     <li class="nav-item"><a class="nav-link fs-5" href="contato.html">Contato</a></li>
                     <li class="nav-item"><a class="nav-link fs-5" href="index.html">Home</a></li>
+                    <li class="nav-item" id="dashboardNavItem" style="display: none;">
+                        <a class="nav-link fs-5" href="#" id="dashboardNavLink">Dashboard</a>
+                    </li>
                 </ul>
             </div>
             <img id="user-profile-pic" class="rounded-circle" src="https://via.placeholder.com/50"
@@ -32,28 +35,36 @@
         </div>
     </header>
 
-    <main class="form-login text-center">
-        <div class="card p-4 shadow">
-            <h1 class="h3 mb-3">Login</h1>
-            <form id="loginForm">
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com" required>
-                    <label for="email">E-mail</label>
+    <main class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-4">
+                <div class="card p-4 shadow">
+                    <h1 class="h3 mb-4 text-center">Login</h1>
+                    <form id="loginForm">
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com" required>
+                            <label for="email">E-mail</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="password" class="form-control" id="password" placeholder="Senha" required>
+                            <label for="password">Senha</label>
+                        </div>
+                        <button class="btn btn-lg btn-primary w-100 mb-3" type="submit">Entrar</button>
+                        <div class="text-center">
+                            <p class="mb-3">Não tem uma conta? <a href="cadastro.html" class="text-decoration-none">Cadastre-se</a></p>
+                        </div>
+                        <div id="loginStatus" class="mt-3 text-center"></div>
+                    </form>
                 </div>
-                <div class="form-floating mb-3">
-                    <input type="password" class="form-control" id="password" placeholder="Senha" required>
-                    <label for="password">Senha</label>
-                </div>
-                <button class="btn btn-lg btn-primary w-100" type="submit">Entrar</button>
-                <p class="mt-3">Não tem uma conta? <a href="cadastro.html" class="text-decoration-none">Cadastre-se</a>
-                </p>
-                <div id="loginStatus" class="mt-3"></div>
-            </form>
+            </div>
         </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/auth.js"></script>
+    <script src="assets/js/auth-nav.js"></script>
     <script src="assets/js/login.js"></script>
+    <script src="assets/js/magnifier-overlay.js"></script>
 </body>
 
 </html>
