--- a/public/pacientes.html
+++ b/public/pacientes.html
@@ -63,6 +63,9 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/auth.js"></script>
+    <script src="assets/js/auth-nav.js"></script>
+    <script src="assets/js/magnifier-overlay.js"></script>
 </body>
 
 </html>
