--- a/public/upload-foto.html
+++ b/public/upload-foto.html
@@ -9,8 +9,29 @@
       .upload-box { max-width:420px; margin:60px auto; padding:20px; background:#fff; border-radius:8px; box-shadow:0 6px 20px rgba(0,0,0,0.08);} 
       .preview { width:120px; height:120px; border-radius:50%; object-fit:cover; border:3px solid var(--azul-claro); display:block; margin:10px auto; }
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
+    <header class="navbar navbar-expand-lg">
+        <div class="container-fluid px-5">
+            <a class="navbar-brand fs-3" href="index.html">Kenko</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav gap-4">
+                    <li class="nav-item"><a class="nav-link fs-5" href="sobre-nos.html">Sobre Nós</a></li>
+                    <li class="nav-item"><a class="nav-link fs-5" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link fs-5" href="index.html">Home</a></li>
+                </ul>
+            </div>
+            <img id="user-profile-pic" class="rounded-circle" src="https://via.placeholder.com/50"
+                alt="Foto de perfil do usuário">
+        </div>
+    </header>
+
     <div class="upload-box">
       <h2 style="text-align:center">Enviar foto de perfil</h2>
       <img id="preview" class="preview" src="https://via.placeholder.com/120" alt="Pré-visualização">
@@ -93,5 +114,10 @@
         }
       });
     </script>
-  </body>
-</html>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="assets/js/auth.js"></script>
+      <script src="assets/js/auth-nav.js"></script>
+      <script src="assets/js/script.js"></script>
+      <script src="assets/js/magnifier-overlay.js"></script>
+    </body>
+  </html>
