--- a/public/sobre-nos.html
+++ b/public/sobre-nos.html
@@ -36,7 +36,15 @@
         <h2 class="text-center mb-4">Sobre Nós</h2>
         <div class="row">
             <div class="col-md-8 mx-auto">
-                <p class="sn">A Kenko nasceu com uma missão clara: tornar o acesso à saúde mais fácil, seguro e humanizado. Sabemos que a rotina pode ser corrida, e encontrar tempo para cuidar de si mesmo é um desafio. Por isso, criamos uma plataforma de teleconsultas que conecta você a médicos qualificados, de diversas especialidades, sem que você precise sair de casa.</p>
+                <p class="sn">A Kenko nasceu com uma missão clara: tornar o acesso à saúde mais fácil, seguro e humanizado. Entendemos que o bem-estar vai muito além de consultas e exames — envolve cuidado, atenção e confiança em cada etapa da jornada do paciente.<br></p>
+
+
+<p class="sn">Sabemos que o dia a dia pode ser corrido e que, muitas vezes, encontrar tempo para cuidar de si mesmo é um desafio. Pensando nisso, desenvolvemos uma plataforma inteligente de saúde digital, que conecta você a médicos qualificados de diversas especialidades, de forma rápida e prática, sem que você precise sair de casa.<br><br></p>
+
+
+<p class="sn">Nosso compromisso é oferecer atendimento médico acessível e de qualidade, com tecnologia de ponta e um toque humano que faz toda a diferença. Através de teleconsultas seguras, prontuário eletrônico e suporte contínuo, a Kenko permite que você acompanhe sua saúde de maneira simples e integrada, sempre com o respaldo de uma equipe dedicada ao seu cuidado. Nosso objetivo é democratizar o acesso à saúde, reduzindo barreiras e levando atendimento médico a quem mais precisa, com transparência, empatia e eficiência.<br><br></p>
+
+<p class="sn">Na Kenko, acreditamos que cuidar da saúde deve ser algo leve, acessível e contínuo. Por isso, trabalhamos todos os dias para transformar a maneira como as pessoas se relacionam com o sistema de saúde, unindo tecnologia, conveniência e o que há de mais importante: o cuidado humano.</p>
             </div>
         </div>
     </main>
